parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lista_declaracoes
Rule 1     lista_declaracoes -> declaracao
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     declaracao -> declaracao_atribuicao
Rule 4     declaracao -> declaracao_expressao
Rule 5     declaracao -> declaracao_funcao
Rule 6     declaracao -> declaracao_se
Rule 7     declaracao -> declaracao_escrever
Rule 8     declaracao -> declaracao_comentario
Rule 9     declaracao_atribuicao -> VAR_ID = lista_expressoes ;
Rule 10    declaracao_atribuicao -> atribuicao
Rule 11    declaracao_atribuicao -> declaracao_atribuicao , atribuicao ;
Rule 12    atribuicao -> VAR_ID = expressao
Rule 13    lista_variaveis -> lista_variaveis , VAR_ID
Rule 14    lista_variaveis -> VAR_ID
Rule 15    lista_expressoes -> lista_expressoes , expressao
Rule 16    lista_expressoes -> expressao
Rule 17    declaracao_expressao -> expressao ;
Rule 18    expressao -> expressao + expressao
Rule 19    expressao -> expressao - expressao
Rule 20    expressao -> expressao * expressao
Rule 21    expressao -> expressao / expressao
Rule 22    expressao -> expressao = = expressao
Rule 23    expressao -> expressao < expressao
Rule 24    expressao -> expressao > expressao
Rule 25    expressao -> expressao < = expressao
Rule 26    expressao -> expressao > = expressao
Rule 27    expressao -> expressao ! = expressao
Rule 28    expressao -> ( expressao )
Rule 29    expressao -> - expressao
Rule 30    expressao -> NUM
Rule 31    expressao -> STRING
Rule 32    expressao -> VAR_ID
Rule 33    expressao -> VAR_ID [ ]
Rule 34    expressao -> [ lista_elementos ]
Rule 35    declaracao_atribuicao -> VAR_ID [ ] = [ lista_elementos ] ;
Rule 36    lista_elementos -> lista_elementos , expressao
Rule 37    lista_elementos -> expressao
Rule 38    lista_elementos -> vazio
Rule 39    expressao -> MAP ( VAR_ID , lista_expressoes )
Rule 40    expressao -> FOLD ( VAR_ID , lista_expressoes , expressao )
Rule 41    expressao -> ENTRADA ( )
Rule 42    expressao -> ALEATORIO ( NUM )
Rule 43    expressao -> VAR_ID ( lista_expressoes )
Rule 44    declaracao_funcao -> FUNCAO VAR_ID ( lista_parametros_opcional ) : bloco_funcao FIM
Rule 45    declaracao_funcao -> FUNCAO VAR_ID ( lista_parametros_opcional ) , : expressao ;
Rule 46    lista_parametros_opcional -> lista_parametros
Rule 47    lista_parametros_opcional -> vazio
Rule 48    lista_parametros -> lista_parametros , VAR_ID
Rule 49    lista_parametros -> lista_parametros , NUM
Rule 50    lista_parametros -> lista_parametros , array_vazio
Rule 51    lista_parametros -> lista_parametros , var_array
Rule 52    lista_parametros -> VAR_ID
Rule 53    lista_parametros -> NUM
Rule 54    lista_parametros -> array_vazio
Rule 55    lista_parametros -> var_array
Rule 56    array_vazio -> [ ]
Rule 57    var_array -> VAR_ID : VAR_ID [ ]
Rule 58    declaracao_se -> SE expressao : lista_declaracoes senao FIM
Rule 59    senao -> SENAO : lista_declaracoes
Rule 60    senao -> SENAOSE expressao : lista_declaracoes
Rule 61    senao -> vazio
Rule 62    expressao -> NEG expressao
Rule 63    declaracao_escrever -> ESCREVER ( expressao ) ;
Rule 64    declaracao_comentario -> COMENTARIO
Rule 65    vazio -> <empty>
Rule 66    expressao -> expressao CONCAT expressao
Rule 67    bloco_funcao -> lista_declaracoes

Terminals, with rules where they appear

!                    : 27
(                    : 28 39 40 41 42 43 44 45 63
)                    : 28 39 40 41 42 43 44 45 63
*                    : 20
+                    : 18
,                    : 11 13 15 36 39 40 40 45 48 49 50 51
-                    : 19 29
/                    : 21
:                    : 44 45 57 58 59 60
;                    : 9 11 17 35 45 63
<                    : 23 25
=                    : 9 12 22 22 25 26 27 35
>                    : 24 26
ALEATORIO            : 42
COMENTARIO           : 64
CONCAT               : 66
ENTRADA              : 41
ESCREVER             : 63
FIM                  : 44 58
FOLD                 : 40
FUNCAO               : 44 45
MAP                  : 39
NEG                  : 62
NUM                  : 30 42 49 53
SE                   : 58
SENAO                : 59
SENAOSE              : 60
STRING               : 31
VAR_ID               : 9 12 13 14 32 33 35 39 40 43 44 45 48 52 57 57
[                    : 33 34 35 35 56 57
]                    : 33 34 35 35 56 57
error                : 

Nonterminals, with rules where they appear

array_vazio          : 50 54
atribuicao           : 10 11
bloco_funcao         : 44
declaracao           : 1 2
declaracao_atribuicao : 3 11
declaracao_comentario : 8
declaracao_escrever  : 7
declaracao_expressao : 4
declaracao_funcao    : 5
declaracao_se        : 6
expressao            : 12 15 16 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 36 37 40 45 58 60 62 63 66 66
lista_declaracoes    : 2 58 59 60 67 0
lista_elementos      : 34 35 36
lista_expressoes     : 9 15 39 40 43
lista_parametros     : 46 48 49 50 51
lista_parametros_opcional : 44 45
lista_variaveis      : 13
senao                : 58
var_array            : 51 55
vazio                : 38 47 61

Parsing method: LALR

state 0

    (0) S' -> . lista_declaracoes
    (1) lista_declaracoes -> . declaracao
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) declaracao -> . declaracao_atribuicao
    (4) declaracao -> . declaracao_expressao
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_se
    (7) declaracao -> . declaracao_escrever
    (8) declaracao -> . declaracao_comentario
    (9) declaracao_atribuicao -> . VAR_ID = lista_expressoes ;
    (10) declaracao_atribuicao -> . atribuicao
    (11) declaracao_atribuicao -> . declaracao_atribuicao , atribuicao ;
    (35) declaracao_atribuicao -> . VAR_ID [ ] = [ lista_elementos ] ;
    (17) declaracao_expressao -> . expressao ;
    (44) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) : bloco_funcao FIM
    (45) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) , : expressao ;
    (58) declaracao_se -> . SE expressao : lista_declaracoes senao FIM
    (63) declaracao_escrever -> . ESCREVER ( expressao ) ;
    (64) declaracao_comentario -> . COMENTARIO
    (12) atribuicao -> . VAR_ID = expressao
    (18) expressao -> . expressao + expressao
    (19) expressao -> . expressao - expressao
    (20) expressao -> . expressao * expressao
    (21) expressao -> . expressao / expressao
    (22) expressao -> . expressao = = expressao
    (23) expressao -> . expressao < expressao
    (24) expressao -> . expressao > expressao
    (25) expressao -> . expressao < = expressao
    (26) expressao -> . expressao > = expressao
    (27) expressao -> . expressao ! = expressao
    (28) expressao -> . ( expressao )
    (29) expressao -> . - expressao
    (30) expressao -> . NUM
    (31) expressao -> . STRING
    (32) expressao -> . VAR_ID
    (33) expressao -> . VAR_ID [ ]
    (34) expressao -> . [ lista_elementos ]
    (39) expressao -> . MAP ( VAR_ID , lista_expressoes )
    (40) expressao -> . FOLD ( VAR_ID , lista_expressoes , expressao )
    (41) expressao -> . ENTRADA ( )
    (42) expressao -> . ALEATORIO ( NUM )
    (43) expressao -> . VAR_ID ( lista_expressoes )
    (62) expressao -> . NEG expressao
    (66) expressao -> . expressao CONCAT expressao

    VAR_ID          shift and go to state 9
    FUNCAO          shift and go to state 13
    SE              shift and go to state 15
    ESCREVER        shift and go to state 16
    COMENTARIO      shift and go to state 17
    (               shift and go to state 14
    -               shift and go to state 18
    NUM             shift and go to state 19
    STRING          shift and go to state 20
    [               shift and go to state 11
    MAP             shift and go to state 21
    FOLD            shift and go to state 22
    ENTRADA         shift and go to state 23
    ALEATORIO       shift and go to state 24
    NEG             shift and go to state 25

    lista_declaracoes              shift and go to state 1
    declaracao                     shift and go to state 2
    declaracao_atribuicao          shift and go to state 3
    declaracao_expressao           shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_se                  shift and go to state 6
    declaracao_escrever            shift and go to state 7
    declaracao_comentario          shift and go to state 8
    atribuicao                     shift and go to state 10
    expressao                      shift and go to state 12

state 1

    (0) S' -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (3) declaracao -> . declaracao_atribuicao
    (4) declaracao -> . declaracao_expressao
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_se
    (7) declaracao -> . declaracao_escrever
    (8) declaracao -> . declaracao_comentario
    (9) declaracao_atribuicao -> . VAR_ID = lista_expressoes ;
    (10) declaracao_atribuicao -> . atribuicao
    (11) declaracao_atribuicao -> . declaracao_atribuicao , atribuicao ;
    (35) declaracao_atribuicao -> . VAR_ID [ ] = [ lista_elementos ] ;
    (17) declaracao_expressao -> . expressao ;
    (44) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) : bloco_funcao FIM
    (45) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) , : expressao ;
    (58) declaracao_se -> . SE expressao : lista_declaracoes senao FIM
    (63) declaracao_escrever -> . ESCREVER ( expressao ) ;
    (64) declaracao_comentario -> . COMENTARIO
    (12) atribuicao -> . VAR_ID = expressao
    (18) expressao -> . expressao + expressao
    (19) expressao -> . expressao - expressao
    (20) expressao -> . expressao * expressao
    (21) expressao -> . expressao / expressao
    (22) expressao -> . expressao = = expressao
    (23) expressao -> . expressao < expressao
    (24) expressao -> . expressao > expressao
    (25) expressao -> . expressao < = expressao
    (26) expressao -> . expressao > = expressao
    (27) expressao -> . expressao ! = expressao
    (28) expressao -> . ( expressao )
    (29) expressao -> . - expressao
    (30) expressao -> . NUM
    (31) expressao -> . STRING
    (32) expressao -> . VAR_ID
    (33) expressao -> . VAR_ID [ ]
    (34) expressao -> . [ lista_elementos ]
    (39) expressao -> . MAP ( VAR_ID , lista_expressoes )
    (40) expressao -> . FOLD ( VAR_ID , lista_expressoes , expressao )
    (41) expressao -> . ENTRADA ( )
    (42) expressao -> . ALEATORIO ( NUM )
    (43) expressao -> . VAR_ID ( lista_expressoes )
    (62) expressao -> . NEG expressao
    (66) expressao -> . expressao CONCAT expressao

    VAR_ID          shift and go to state 9
    FUNCAO          shift and go to state 13
    SE              shift and go to state 15
    ESCREVER        shift and go to state 16
    COMENTARIO      shift and go to state 17
    (               shift and go to state 14
    -               shift and go to state 18
    NUM             shift and go to state 19
    STRING          shift and go to state 20
    [               shift and go to state 11
    MAP             shift and go to state 21
    FOLD            shift and go to state 22
    ENTRADA         shift and go to state 23
    ALEATORIO       shift and go to state 24
    NEG             shift and go to state 25

    declaracao                     shift and go to state 26
    declaracao_atribuicao          shift and go to state 3
    declaracao_expressao           shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_se                  shift and go to state 6
    declaracao_escrever            shift and go to state 7
    declaracao_comentario          shift and go to state 8
    atribuicao                     shift and go to state 10
    expressao                      shift and go to state 12

state 2

    (1) lista_declaracoes -> declaracao .

    VAR_ID          reduce using rule 1 (lista_declaracoes -> declaracao .)
    FUNCAO          reduce using rule 1 (lista_declaracoes -> declaracao .)
    SE              reduce using rule 1 (lista_declaracoes -> declaracao .)
    ESCREVER        reduce using rule 1 (lista_declaracoes -> declaracao .)
    COMENTARIO      reduce using rule 1 (lista_declaracoes -> declaracao .)
    (               reduce using rule 1 (lista_declaracoes -> declaracao .)
    -               reduce using rule 1 (lista_declaracoes -> declaracao .)
    NUM             reduce using rule 1 (lista_declaracoes -> declaracao .)
    STRING          reduce using rule 1 (lista_declaracoes -> declaracao .)
    [               reduce using rule 1 (lista_declaracoes -> declaracao .)
    MAP             reduce using rule 1 (lista_declaracoes -> declaracao .)
    FOLD            reduce using rule 1 (lista_declaracoes -> declaracao .)
    ENTRADA         reduce using rule 1 (lista_declaracoes -> declaracao .)
    ALEATORIO       reduce using rule 1 (lista_declaracoes -> declaracao .)
    NEG             reduce using rule 1 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 1 (lista_declaracoes -> declaracao .)
    SENAO           reduce using rule 1 (lista_declaracoes -> declaracao .)
    SENAOSE         reduce using rule 1 (lista_declaracoes -> declaracao .)
    FIM             reduce using rule 1 (lista_declaracoes -> declaracao .)


state 3

    (3) declaracao -> declaracao_atribuicao .
    (11) declaracao_atribuicao -> declaracao_atribuicao . , atribuicao ;

    VAR_ID          reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    FUNCAO          reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    SE              reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ESCREVER        reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    COMENTARIO      reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    (               reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    -               reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    NUM             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    STRING          reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    [               reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    MAP             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    FOLD            reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ENTRADA         reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ALEATORIO       reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    NEG             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    $end            reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    SENAO           reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    SENAOSE         reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    FIM             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ,               shift and go to state 27


state 4

    (4) declaracao -> declaracao_expressao .

    VAR_ID          reduce using rule 4 (declaracao -> declaracao_expressao .)
    FUNCAO          reduce using rule 4 (declaracao -> declaracao_expressao .)
    SE              reduce using rule 4 (declaracao -> declaracao_expressao .)
    ESCREVER        reduce using rule 4 (declaracao -> declaracao_expressao .)
    COMENTARIO      reduce using rule 4 (declaracao -> declaracao_expressao .)
    (               reduce using rule 4 (declaracao -> declaracao_expressao .)
    -               reduce using rule 4 (declaracao -> declaracao_expressao .)
    NUM             reduce using rule 4 (declaracao -> declaracao_expressao .)
    STRING          reduce using rule 4 (declaracao -> declaracao_expressao .)
    [               reduce using rule 4 (declaracao -> declaracao_expressao .)
    MAP             reduce using rule 4 (declaracao -> declaracao_expressao .)
    FOLD            reduce using rule 4 (declaracao -> declaracao_expressao .)
    ENTRADA         reduce using rule 4 (declaracao -> declaracao_expressao .)
    ALEATORIO       reduce using rule 4 (declaracao -> declaracao_expressao .)
    NEG             reduce using rule 4 (declaracao -> declaracao_expressao .)
    $end            reduce using rule 4 (declaracao -> declaracao_expressao .)
    SENAO           reduce using rule 4 (declaracao -> declaracao_expressao .)
    SENAOSE         reduce using rule 4 (declaracao -> declaracao_expressao .)
    FIM             reduce using rule 4 (declaracao -> declaracao_expressao .)


state 5

    (5) declaracao -> declaracao_funcao .

    VAR_ID          reduce using rule 5 (declaracao -> declaracao_funcao .)
    FUNCAO          reduce using rule 5 (declaracao -> declaracao_funcao .)
    SE              reduce using rule 5 (declaracao -> declaracao_funcao .)
    ESCREVER        reduce using rule 5 (declaracao -> declaracao_funcao .)
    COMENTARIO      reduce using rule 5 (declaracao -> declaracao_funcao .)
    (               reduce using rule 5 (declaracao -> declaracao_funcao .)
    -               reduce using rule 5 (declaracao -> declaracao_funcao .)
    NUM             reduce using rule 5 (declaracao -> declaracao_funcao .)
    STRING          reduce using rule 5 (declaracao -> declaracao_funcao .)
    [               reduce using rule 5 (declaracao -> declaracao_funcao .)
    MAP             reduce using rule 5 (declaracao -> declaracao_funcao .)
    FOLD            reduce using rule 5 (declaracao -> declaracao_funcao .)
    ENTRADA         reduce using rule 5 (declaracao -> declaracao_funcao .)
    ALEATORIO       reduce using rule 5 (declaracao -> declaracao_funcao .)
    NEG             reduce using rule 5 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 5 (declaracao -> declaracao_funcao .)
    SENAO           reduce using rule 5 (declaracao -> declaracao_funcao .)
    SENAOSE         reduce using rule 5 (declaracao -> declaracao_funcao .)
    FIM             reduce using rule 5 (declaracao -> declaracao_funcao .)


state 6

    (6) declaracao -> declaracao_se .

    VAR_ID          reduce using rule 6 (declaracao -> declaracao_se .)
    FUNCAO          reduce using rule 6 (declaracao -> declaracao_se .)
    SE              reduce using rule 6 (declaracao -> declaracao_se .)
    ESCREVER        reduce using rule 6 (declaracao -> declaracao_se .)
    COMENTARIO      reduce using rule 6 (declaracao -> declaracao_se .)
    (               reduce using rule 6 (declaracao -> declaracao_se .)
    -               reduce using rule 6 (declaracao -> declaracao_se .)
    NUM             reduce using rule 6 (declaracao -> declaracao_se .)
    STRING          reduce using rule 6 (declaracao -> declaracao_se .)
    [               reduce using rule 6 (declaracao -> declaracao_se .)
    MAP             reduce using rule 6 (declaracao -> declaracao_se .)
    FOLD            reduce using rule 6 (declaracao -> declaracao_se .)
    ENTRADA         reduce using rule 6 (declaracao -> declaracao_se .)
    ALEATORIO       reduce using rule 6 (declaracao -> declaracao_se .)
    NEG             reduce using rule 6 (declaracao -> declaracao_se .)
    $end            reduce using rule 6 (declaracao -> declaracao_se .)
    SENAO           reduce using rule 6 (declaracao -> declaracao_se .)
    SENAOSE         reduce using rule 6 (declaracao -> declaracao_se .)
    FIM             reduce using rule 6 (declaracao -> declaracao_se .)


state 7

    (7) declaracao -> declaracao_escrever .

    VAR_ID          reduce using rule 7 (declaracao -> declaracao_escrever .)
    FUNCAO          reduce using rule 7 (declaracao -> declaracao_escrever .)
    SE              reduce using rule 7 (declaracao -> declaracao_escrever .)
    ESCREVER        reduce using rule 7 (declaracao -> declaracao_escrever .)
    COMENTARIO      reduce using rule 7 (declaracao -> declaracao_escrever .)
    (               reduce using rule 7 (declaracao -> declaracao_escrever .)
    -               reduce using rule 7 (declaracao -> declaracao_escrever .)
    NUM             reduce using rule 7 (declaracao -> declaracao_escrever .)
    STRING          reduce using rule 7 (declaracao -> declaracao_escrever .)
    [               reduce using rule 7 (declaracao -> declaracao_escrever .)
    MAP             reduce using rule 7 (declaracao -> declaracao_escrever .)
    FOLD            reduce using rule 7 (declaracao -> declaracao_escrever .)
    ENTRADA         reduce using rule 7 (declaracao -> declaracao_escrever .)
    ALEATORIO       reduce using rule 7 (declaracao -> declaracao_escrever .)
    NEG             reduce using rule 7 (declaracao -> declaracao_escrever .)
    $end            reduce using rule 7 (declaracao -> declaracao_escrever .)
    SENAO           reduce using rule 7 (declaracao -> declaracao_escrever .)
    SENAOSE         reduce using rule 7 (declaracao -> declaracao_escrever .)
    FIM             reduce using rule 7 (declaracao -> declaracao_escrever .)


state 8

    (8) declaracao -> declaracao_comentario .
